--- a/verify.yml
+++ b/verify.yml
@@ -170,6 +170,60 @@ paths:
               - tr-tr
               - zh-cn
               - zh-tw
+            x-ms-enum:
+              values:
+                - value: de-de
+                  description: 'German, German (female / male)'
+                - value: en-au
+                  description: 'English, Australian (female / male)'
+                - value: en-gb
+                  description: 'English, UK (female / male)'
+                - value: en-us
+                  description: 'English, US (female / male)'
+                - value: en-in
+                  description: 'English, Indian (female)'
+                - value: es-es
+                  description: 'Spanish, Spanish (female / male)'
+                - value: es-mx
+                  description: 'Spanish, Mexican (female)'
+                - value: es-us
+                  description: 'Spanish, US (female / male)'
+                - value: fr-ca
+                  description: 'French, Canadian (female)'
+                - value: fr-fr
+                  description: 'French, French (female / male)'
+                - value: is-is
+                  description: 'Icelandic, Icelandic (female / male)'
+                - value: it-it
+                  description: 'Italian, Italian (female / male)'
+                - value: ja-jp
+                  description: 'Japanese, Japanese (female / male)'
+                - value: ko-kr
+                  description: 'Korean, Korean (female / male)'
+                - value: nl-nl
+                  description: 'Dutch, Netherlands (female / male)'
+                - value: pl-pl
+                  description: 'Polish, Polish (female / male)'
+                - value: pt-pt
+                  description: 'Portuguese, Portuguese (male)'
+                - value: pt-br
+                  description: 'Portuguese, Brazilian (female / male)'
+                - value: ro-ro
+                  description: 'Romanian, Romanian (female)'
+                - value: ru-ru
+                  description: 'Russian, Russian (female)'
+                - value: sv-se
+                  description: 'Swedish, Sweden (female)'
+                - value: tr-tr
+                  description: 'Turkish, Turkish (female)'
+                - value: zh-cn
+                  description: 'Chinese (Mandarin), Simplified Chinese (female / male)'
+                - value: zh-tw
+                  description: >-
+                    Chinese, Traditional. Text only. If you request Taiwanese
+                    (`zh-tw`), the text message will be sent in Traditional
+                    Chinese, but the voice call uses a female voice speaking
+                    English with a Chinese accent.
         - name: require_type
           required: false
           in: query
@@ -362,6 +416,12 @@ paths:
             enum:
               - cancel
               - trigger_next_event
+            x-ms-enum:
+              values:
+                - value: cancel
+                  description: stop the request
+                - value: trigger_next_event
+                  description: advance the request to the next part of the process.
           example: cancel
       responses:
         '200':
@@ -419,6 +479,63 @@ components:
             - 18
             - 19
             - 101
+          x-ms-enum:
+            values:
+              - value: 0
+                description: The request was successfully accepted by Nexmo.
+              - value: 1
+                description: >-
+                  You are trying to send more than the maximum of 30 requests
+                  per second.
+              - value: 2
+                description: The stated parameter is missing.
+              - value: 3
+                description: >-
+                  Invalid value for parameter. If you see Facility not allowed
+                  in the error text, check that you are using the correct Base
+                  URL in your request.
+              - value: 4
+                description: >-
+                  The supplied API key or secret in the request is either
+                  invalid or disabled.
+              - value: 5
+                description: >-
+                  An error occurred processing this request in the Cloud
+                  Communications Platform.
+              - value: 6
+                description: The request could not be routed.
+              - value: 7
+                description: >-
+                  The number you are trying to verify is blacklisted for
+                  verification
+              - value: 8
+                description: >-
+                  The api_key you supplied is for an account that has been
+                  barred from submitting messages
+              - value: 9
+                description: >-
+                  Your account does not have sufficient credit to process this
+                  request.
+              - value: 10
+                description: Concurrent verifications to the same number are not allowed
+              - value: 15
+                description: The request has been rejected.
+              - value: 16
+                description: The code inserted does not match the expected value
+              - value: 17
+                description: >-
+                  You can run Verify Check on a `request_id` up to three times
+                  unless a new PIN code is generated. If you check a request
+                  more than 3 times, it is set to FAILED and you cannot check it
+                  again.
+              - value: 18
+                description: >-
+                  You added more than the maximum of 10 `request_id`s to your
+                  request.
+              - value: 19
+                description: No more events are left to execute for the request
+              - value: 101
+                description: There are no matching Verify requests.
         error_text:
           type: string
           description: 'If status is not 0, this explains the error encountered.'
@@ -478,6 +595,22 @@ components:
             - EXPIRED
             - CANCELLED
             - '101'
+          x-ms-enum:
+            values:
+              - value: IN PROGRESS
+                description: still in progress.
+              - value: SUCCESS
+                description: your user entered the PIN correctly.
+              - value: FAILED
+                description: user entered the wrong pin more than 3 times.
+              - value: EXPIRED
+                description: no PIN entered during the `pin_expiry` time.
+              - value: CANCELLED
+                description: the request was cancelled using Verify Control.
+              - value: '101'
+                description: >-
+                  the `request_id` you set in the Verify Search request is
+                  invalid.
         number:
           type: string
           description: The phone number this _Verify Request_ was made for.
@@ -559,6 +692,19 @@ components:
           enum:
             - '0'
             - '19'
+          x-ms-enum:
+            values:
+              - value: '0'
+                description: Success
+              - value: null
+                description: >-
+                  Cancel: You must wait at least 30s after sending a Verify
+                  Request before cancelling, or Verify has made too many
+                  attempts to redeliver a PIN for this request; you have to wait
+                  for the workflow to complete. Also, you cannot initiate a new
+                  Verify Request until this one expires. Trigger_next_event: All
+                  the attempts to deliver the PIN for this request have been
+                  completed and there are no more events to skip to.
         command:
           type: string
           description: The `cmd` you sent in the request.
