--- a/verify.yml
+++ b/verify.yml
@@ -458,83 +458,83 @@ components:
           maxLength: 32
           example: aaaaaaaafffffffff0000000099999999
         status:
-          type: integer
+          type: string
           description: The response code that explains how your request proceeded.
-          example: 0
+          example: '0'
           enum:
-            - 0
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
-            - 6
-            - 7
-            - 8
-            - 9
-            - 10
-            - 15
-            - 16
-            - 17
-            - 18
-            - 19
-            - 101
+            - '0'
+            - '1'
+            - '2'
+            - '3'
+            - '4'
+            - '5'
+            - '6'
+            - '7'
+            - '8'
+            - '9'
+            - '10'
+            - '15'
+            - '16'
+            - '17'
+            - '18'
+            - '19'
+            - '101'
           x-ms-enum:
             values:
-              - value: 0
+              - value: '0'
                 description: The request was successfully accepted by Nexmo.
-              - value: 1
+              - value: '1'
                 description: >-
                   You are trying to send more than the maximum of 30 requests
                   per second.
-              - value: 2
+              - value: '2'
                 description: The stated parameter is missing.
-              - value: 3
+              - value: '3'
                 description: >-
                   Invalid value for parameter. If you see Facility not allowed
                   in the error text, check that you are using the correct Base
                   URL in your request.
-              - value: 4
+              - value: '4'
                 description: >-
                   The supplied API key or secret in the request is either
                   invalid or disabled.
-              - value: 5
+              - value: '5'
                 description: >-
                   An error occurred processing this request in the Cloud
                   Communications Platform.
-              - value: 6
+              - value: '6'
                 description: The request could not be routed.
-              - value: 7
+              - value: '7'
                 description: >-
                   The number you are trying to verify is blacklisted for
                   verification
-              - value: 8
+              - value: '8'
                 description: >-
                   The api_key you supplied is for an account that has been
                   barred from submitting messages
-              - value: 9
+              - value: '9'
                 description: >-
                   Your account does not have sufficient credit to process this
                   request.
-              - value: 10
+              - value: '10'
                 description: Concurrent verifications to the same number are not allowed
-              - value: 15
+              - value: '15'
                 description: The request has been rejected.
-              - value: 16
+              - value: '16'
                 description: The code inserted does not match the expected value
-              - value: 17
+              - value: '17'
                 description: >-
                   You can run Verify Check on a `request_id` up to three times
                   unless a new PIN code is generated. If you check a request
                   more than 3 times, it is set to FAILED and you cannot check it
                   again.
-              - value: 18
+              - value: '18'
                 description: >-
                   You added more than the maximum of 10 `request_id`s to your
                   request.
-              - value: 19
+              - value: '19'
                 description: No more events are left to execute for the request
-              - value: 101
+              - value: '101'
                 description: There are no matching Verify requests.
         error_text:
           type: string
