--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -169,6 +169,10 @@ components:
           description: '**Advanced**: The availability for an SMS in milliseconds. Depends on `type` parameter having the value `wappush`.'
           type: string
           example: https://example.com
+        client-ref:
+          description: **Advanced**: You can optionally include your own reference of up to 40 characters.
+          type: string
+          example: my-personal-reference'
     Error:
       type: object
       properties:
