--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -170,7 +170,7 @@ components:
           type: string
           example: https://example.com
         client-ref:
-          description: **Advanced**: You can optionally include your own reference of up to 40 characters.
+          description: '**Advanced**: You can optionally include your own reference of up to 40 characters.'
           type: string
           example: my-personal-reference'
     Error:
